--- a/templates/index.html
+++ b/templates/index.html
@@ -28,7 +28,7 @@ a {
   </head>
   <body>
 
-    <a href='/login'><button>Кнопка с рисунком</button></p></a>
+    <a href='login'><button>Кнопка с рисунком</button></p></a>
     <!-- Optional JavaScript -->
     <!-- jQuery first, then Popper.js, then Bootstrap JS -->
     <script src="templates/js/jquery-3.6.0.min.js"></script>
