--- a/templates/1.html
+++ b/templates/1.html
@@ -10,6 +10,12 @@
 
     <title>Hello, world!</title>
     <style>
+      .form-signin {
+    width: 100%;
+    max-width: 330px;
+    padding: 15px;
+    margin: 0 auto;
+}
 
 a {
   color: white;
@@ -28,7 +34,7 @@ a {
   </head>
   <body>
 
-      <form class="form-signin">
+      <form class="form-signin" action="#" method="post">
       <img class="mb-4" src="https://getbootstrap.com/docs/4.0/assets/brand/bootstrap-solid.svg" alt="" width="72" height="72">
       <h1 class="h3 mb-3 font-weight-normal">Please sign in</h1>
       <label for="inputEmail" class="sr-only">Email address</label>
