--- a/templates/purchased.html
+++ b/templates/purchased.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Purchased Code | Code Saler</title>
+    <title>Purchased Code | Code Seller</title>
 
     <link href="/static/css/content.css" rel="stylesheet" type="text/css"/>
 </head>
