--- a/templates/codeload.html
+++ b/templates/codeload.html
@@ -7,7 +7,7 @@
 
     <link href="/static/css/style.css" rel="stylesheet" type="text/css"/>
     <link href="/static/css/content.css" rel="stylesheet" type="text/css"/>
-    <title>Code Saler</title>
+    <title>Code Seller</title>
 </head>
 <body>
 
