--- a/templates/codeload.html
+++ b/templates/codeload.html
@@ -21,7 +21,7 @@
 
         <div class="fields-loadcode" id="password-field"><p>Choose ZIP with your code</p><input class="input-fields-loadcode" type="file" name="file" accept="application/zip" required></div>
 
-        <div class="fields-loadcode" id="password-field"><p>Choose image for your code</p><input class="input-fields-loadcode" type="file" name="image" required></div>
+        <div class="fields-loadcode" id="password-field"><p>Choose image for your code</p><input class="input-fields-loadcode" type="file" name="image" accept="image/*" required></div>
 
         <div id="login-field"><input id="login-button" type="submit" value="Upload"></div>
 
