--- a/templates/code.html
+++ b/templates/code.html
@@ -20,13 +20,17 @@
     </div>
 
         <div id="code-button">
-        {% if user_id == code.author_id or check(user_id, code.id) %}
+        {% if check or user_id == code.author_id %}
             <div class="purchase-button"><a id="purchase-button-link" href="{{ url_for('download_code', code_id=code.id) }}">Download</a></div>
         {% else %}
             <div class="purchase-button"><a id="purchase-button-link" href="{{ url_for('make_purchase', code_id=code.id) }}">Buy</a></div>
         </div> 
         {% endif %}
 
-
+        {% if user_id == code.author_id %}
+            <form action="{{ url_for('delete_code', code_id=code.id) }}" method="post">
+                <input type="submit" value="DELETE">
+            </form>
+        {% endif %}
 </body>
 </html>
